--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Motion pictures -- Production and direction -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Girls -- Juvenile fiction'
+- GITenberg
 title: "The Moving Picture Girls at Rocky Ranch\r\nOr, Great Days Among the Cowboys"
 url: http://www.gutenberg.org/ebooks/20349
